# emsarray

./: .flake8  .gitignore  .gitlab-ci.yml  .readthedocs.yaml  CITATION.cff  LICENCE  README.md  notes.md  pyproject.toml  requirements.txt  setup.cfg  tox.ini
.github/actions/build-python-package/: action.yaml
.github/actions/environment/: action.yaml
.github/workflows/: ci.yaml  prerelease.yaml  publish.yaml  release-branch.yaml  release-tags.yaml
conda-recipes/emsarray/: meta.yaml
conda-recipes/emsarray-core/: meta.yaml
continuous-integration/: condarc.yaml  docs.yaml  environment.yaml  requirements-3.10.txt  requirements-3.11.txt  requirements-3.12.txt  requirements-3.13.txt  requirements-3.14.txt  requirements-minimum.txt  requirements.txt
docs/: .gitignore  Makefile  cli.rst  conf.py  examples.rst  index.rst  installing.rst  live.py  releases.rst  roles.py  testing.rst
docs/api/: accessors.rst  emsarray.rst  exceptions.rst  index.rst  masking.rst  operations.rst  plot.rst  transect.rst  tutorial.rst  types.rst  utils.rst
docs/api/cli/: index.rst
docs/api/conventions/: arakawa-c.rst  grid.rst  index.rst  interface.rst  shoc.rst  ugrid.rst
docs/api/formats/: arakawa-c.rst  grid.rst  index.rst  interface.rst  shoc.rst  ugrid.rst
docs/api/operations/: cache.rst  depth.rst  geometry.rst  index.rst  point_extraction.rst  triangulate.rst
docs/concepts/: grids.rst  index.rst  indexing.rst
docs/developing/: conventions.rst  formats.rst  grass.py  grass.rst  index.rst  scripts.rst  sea_surface_temperature.py
docs/examples/: animated-plot.py  animated-plot.rst  animation.ipynb  clip.ipynb  index.rst  kgari-transect.py  kgari-transect.rst  plot-set-extent.py  plot-set-extent.rst  plot-with-clim.py  plot-with-clim.rst  plot.ipynb  section.ipynb
docs/getting-started/: faq.rst  index.rst  installing.rst  overview.rst
docs/internal/: ci-dependencies.rst  index.rst  releasing.rst
docs/releases/: 0.1.0.rst  0.10.0.rst  0.2.0.rst  0.3.0.rst  0.3.1.rst  0.4.0.rst  0.4.1.rst  0.4.2.rst  0.4.3.rst  0.5.0.rst  0.6.0.rst  0.6.1.rst  0.7.0.rst  0.8.0.rst  0.9.0.rst  1.0.0a1.rst  development.rst  index.rst
examples/: plot-animated-transect.py  plot-animation.py  plot-kgari-transect.py  plot-set-extent.py  plot-two-subplots.py  plot-vector-methods.py  plot-with-clim.py
scripts/: build-local-conda-package.sh  min_deps_check.py  post-release.py  pre-release.py  release.py  tag-release.py  update_pinned_dependencies.sh
src/emsarray/: __init__.py  __main__.py  accessors.py  decorators.py  exceptions.py  formats.py  masking.py  nco.py  operations.py  plot.py  state.py  timer.py  transect.py  tutorial.py  types.py  utils.py
src/emsarray/cli/: __init__.py  _operation.py  clip.py  command.py  exceptions.py  extract_points.py  utils.py
src/emsarray/cli/commands/: clip.py  export_geometry.py  extract_points.py  plot.py
src/emsarray/compat/: shapely.py
src/emsarray/conventions/: __init__.py  _base.py  _fixes.py  _helpers.py  _registry.py  _utils.py  arakawa_c.py  grid.py  shoc.py  ugrid.py
src/emsarray/formats/: __init__.py  _base.py  _helpers.py  arakawa_c.py  grid.py  shoc.py  ugrid.py
src/emsarray/operations/: cache.py  depth.py  geometry.py  point_extraction.py  triangulate.py
src/emsarray/plot/: __init__.py  artists.py  base.py  shortcuts.py  utils.py
src/emsarray/transect/: __init__.py  artists.py  base.py  utils.py
tests/: conftest.py  test_accessors.py  test_binding.py  test_formats.py  test_get_dataset_convention.py  test_get_file_format.py  test_nco.py  test_plot.py  test_transect.py  test_utils.py  utils.py
tests/cli/: test_utils.py
tests/cli/commands/: conftest.py  test_clip.py  test_export_geometry.py  test_extract_points.py  test_plot.py
tests/conventions/: test_base.py  test_cfgrid1d.py  test_cfgrid2d.py  test_helpers.py  test_polygons.py  test_registry.py  test_shoc_standard.py  test_ugrid.py
tests/datasets/: cfgrid1d.nc  cfgrid2d.nc  make_examples.py  shoc_standard.nc  times.nc  ugrid_mesh2d.nc  ugrid_mesh2d_one_indexed.nc
tests/datasets/masking/find_fill_value/: float_with_fill_value.nc  float_with_fill_value_and_offset.nc  int_with_fill_value_and_offset.nc  make_datasets.py  timedelta_with_missing_value.nc
tests/datasets/multifile_datasets/cfgrid2d/: cfgrid2d_2024-01-01.nc  cfgrid2d_2024-01-02.nc
tests/datasets/multifile_datasets/ugrid_mesh2d/: ugrid_mesh2d_2024-01-01.nc  ugrid_mesh2d_2024-01-02.nc
tests/formats/: test_base.py  test_cfgrid1d.py  test_cfgrid2d.py  test_helpers.py  test_shoc_standard.py  test_ugrid.py
tests/helpers/: array.py  datasets.py  functools.py  geometry.py  memory.py  versions.py  warnings.py
tests/masking/: test_mask_dataset.py  test_utils.py
tests/misc/: test_xarray_timedelta_units.py
tests/operations/: test_cache.py  test_geometry.py  test_normalize_depth_variables.py  test_ocean_floor.py  test_triangulate_dataset.py
tests/operations/depth/: test_normalize_depth_variables.py  test_ocean_floor.py
tests/operations/point_extraction/: test_extract_dataframe.py  test_extract_points.py
tests/operations/triangulate/: test_triangulate_dataset.py
tests/transect/: test_plot.py  test_transect.py
tests/utils/: test_data_array_getters.py  test_datetime_from_np_time.py  test_ems_time_units.py  test_estimate_bounds.py  test_xarray.py
