[build-system]
requires = [
	"setuptools >= 35.0.2",
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = [
	# TODO Work around till the mpl-baseline-path ini option is included in the
	# next pytest-mpl release.
	"--mpl-baseline-path", "tests/baseline_images",
]

testpaths = ["tests"]
filterwarnings = [
	"error",
	"ignore:GeometryTypeError will derive from ShapelyError:shapely.errors.ShapelyDeprecationWarning",
	# xarray.backends.plugins uses a deprecated interface
	# Fixed in xarray >= v2022.06.0
	"ignore:SelectableGroups dict interface is deprecated. Use select.:DeprecationWarning",
]
markers = [
	"matplotlib: Tests that involve matplotlib and plotting",
	"tutorial: Tests that involve the tutorial datasets",
]

mpl-use-full-test-name = true
# TODO This option will be included in the next version of pytest-mpl.
# Till then, it is added using addopts above
# mpl-baseline-path = "tests/baseline_images"

[tool.mypy]
python_version = "3.10"
plugins = ["numpy.typing.mypy_plugin"]

disallow_untyped_defs = true
warn_return_any = true
warn_unused_configs = true

mypy_path = "$MYPY_CONFIG_FILE_DIR/src"

[[tool.mypy.overrides]]
# These modules do not (yet) have type stubs, so they need to be explicitly ignored
module = [
	"cartopy.*",
	"cftime.*",
	"cfunits.*",
	"cryptography.*",
	"geojson.*",
	"matplotlib.*",
	"netCDF4.*",
	"pooch.*",
	"pytest.*",
	"shapefile.*",
	"shapely.*",
	"traitlets.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
warn_return_any = false

[tool.isort]
multi_line_output = 5
known_first_party = "emsarray,tests"

[tool.coverage.run]
source_pkgs = ["emsarray"]

[tool.coverage.report]
exclude_lines = [
	"# pragma: no cover",
	"@abc\\.abstract",
	"if TYPE_CHECKING:",
]
