[metadata]
name = emsarray
description = xarray extension that supports EMS model formats
version = 0.3.0
long_description = file: README.md
long_description_content_type = text/markdown
author = "Coastal Environmental Modelling team, Oceans and Atmosphere, CSIRO"
author_email = "coasts@csiro.au"
license = "CSIRO Open Source Software Licence Agreement (variation of the BSD / MIT License)"
license_files = LICENCE

project_urls =
	Documentation = https://emsarray.readthedocs.io/
	Release notes = https://emsarray.readthedocs.io/en/stable/releases/
	Source = https://github.com/csiro-coasts/emsarray/

[options]
packages = find:
package_dir =
	=src
include_package_data = True
install_requires =
	# These dependencies could probably be relaxed somewhat to allow older
	# versions, but this would need testing
	bottleneck >=1.3
	geojson >=2.5.0
	importlib_metadata >=4.0.0
	netcdf4 >=1.5.3
	numpy >=1.18.0
	packaging >=21.3
	shapely >=1.8.0
	pyshp >=2.3.0
	xarray[parallel] >=0.18.2

[options.packages.find]
where = src
include = emsarray*

[options.extras_require]
plot =
	cartopy >=0.20.0
	matplotlib >=3.4.3
	pykdtree >=1.2.2

tutorial =
	pooch >=1.3.0

complete =
	%(plot)s
	%(tutorial)s

docs =
	sphinx ~=4.3.1
	sphinx_book_theme ~=0.3.2
	livereload~=2.6.3

testing =
	%(plot)s
	%(tutorial)s
	%(docs)s
	pytest
	pytest-cov
	mypy
	pandas-stubs
	types-pytz
	flake8
	isort
	tox

[options.entry_points]
console_scripts =
	emsarray = emsarray.cli:main

emsarray.formats =
	ArakawaC = emsarray.formats.arakawa_c:ArakawaC
	CFGrid1D = emsarray.formats.grid:CFGrid1D
	CFGrid2D = emsarray.formats.grid:CFGrid2D
	ShocSimple = emsarray.formats.shoc:ShocSimple
	ShocStandard = emsarray.formats.shoc:ShocStandard
	UGrid = emsarray.formats.ugrid:UGrid
# emsarray.formats end - marker used by docs

[flake8]
extend-ignore = E501,W503
