[metadata]
name = emsarray
description = xarray extension that supports multiple geometry conventions
version = 0.6.1
long_description = file: README.md
long_description_content_type = text/markdown
author = "Coastal Environmental Modelling team, Oceans and Atmosphere, CSIRO"
author_email = "coasts@csiro.au"
license = "BSD-3-Clause"
python_requires = ">=3.10"

project_urls =
	Documentation = https://emsarray.readthedocs.io/
	Release notes = https://emsarray.readthedocs.io/en/stable/releases/0.6.1/
	Source = https://github.com/csiro-coasts/emsarray/

[options]
packages = find:
package_dir =
	=src
include_package_data = True
install_requires =
	# These dependencies could probably be relaxed somewhat to allow older
	# versions, but this would need testing
	bottleneck >=1.3
	geojson >=3.0
	netcdf4 >=1.6.4
	numpy >=1.24
	packaging >=23.1
	shapely >=2.0
	pyshp >=2.3
	xarray[parallel] >=2023.5

[options.packages.find]
where = src
include = emsarray*

[options.package_data]
emsarray = py.typed

[options.extras_require]
plot =
	cartopy >=0.21
	matplotlib >=3.7
	pykdtree >=1.3
	cfunits >= 3.3

tutorial =
	pooch >=1.7

complete =
	%(plot)s
	%(tutorial)s

docs =
	sphinx ~=6.2.1
	sphinx_book_theme ~=1.0.1
	livereload~=2.6.3

testing =
	%(plot)s
	%(tutorial)s
	%(docs)s
	pytest
	pytest-cov
	pytest-mpl
	mypy
	pandas-stubs
	types-pytz
	flake8
	isort
	tox

[options.entry_points]
console_scripts =
	emsarray = emsarray.cli:main

emsarray.conventions =
	ArakawaC = emsarray.conventions.arakawa_c:ArakawaC
	CFGrid1D = emsarray.conventions.grid:CFGrid1D
	CFGrid2D = emsarray.conventions.grid:CFGrid2D
	ShocSimple = emsarray.conventions.shoc:ShocSimple
	ShocStandard = emsarray.conventions.shoc:ShocStandard
	UGrid = emsarray.conventions.ugrid:UGrid
# emsarray.conventions end - marker used by docs

[flake8]
extend-select = E,W
extend-ignore = E501,W503,E731
